src/App.scss
@import url('https://fonts.googleapis.com/css?family=Material+Icons');
@import url('https://fonts.googleapis.com/css?family=Fira+Sans');
@import './mdc';

body {
  margin: 0;
  padding: 0;
  font-family: $mdc-typography-font-family;
}

h1 {
  font-size: 250%;
}

h1,
h2,
h3 {
  font-weight: 300;
  margin: inherit, 10px;
}

.btn-outline-primary {
  color: #555;
  background-color: #fff;
  background-image: none;
  border-color: #ffb844;
}

.btn-outline-primary:hover {
  color: #fff;
  background-color: rgb(28, 48, 92);
  border-color: rgb(28, 48, 92);
}

#form-header {
  margin-bottom: 3em;
}

#form-header #header {
  font-size: 64px;
}

.font-icon {
  height: 1em;
  left: 0.125em;
  bottom: 0.125em;
  position: relative;
}

